force-app/main/default/objects/ssot__CarePlanDetail__dlm/fields/ssot__PriorityType__c.field-meta.xml
<CustomField>
    <fullName>ssot__PriorityType__c</fullName>
    <label>Priority Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PriorityType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>