force-app/main/default/objects/ssot__CarePlanDetail__dlm/fields/ssot__rel_1734838328158_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1734838328158_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CarePlanDetail_DetailCodeId_map_Code_rel</label>
    <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
    <relationshipLabel>CarePlanDetail_DetailCodeId_map_Code_rel</relationshipLabel>
    <relationshipName>rel_1734838328158_end</relationshipName>
    <type>Lookup</type>
</CustomField>