force-app/main/default/objects/ssot__CarePlanDetail__dlm/fields/ssot__rel_1734838329279_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1734838329279_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CarePlanDetail_DetailRecordId_map_Ca_rel</label>
    <referenceTo>ssot__CarePlan__dlm</referenceTo>
    <relationshipLabel>CarePlanDetail_DetailRecordId_map_Ca_rel</relationshipLabel>
    <relationshipName>rel_1734838329279_end</relationshipName>
    <type>Lookup</type>
</CustomField>